testdata/bad/bad-fail-6.ct
# Command using ExitCodeErr

$ code17 --> FAIL 4

